# CareerReach-AI

./: README.md  THIRD_PARTY_NOTICES.md
careerreach-ai/: AGENTS.md  LICENSE  README.md  SKILL.md  THIRD_PARTY_NOTICES.md  openai.yaml  pyproject.toml
careerreach-ai/docs/: architecture.md
careerreach-ai/examples/: codex_conversation_prompt.md  mock_agent_output.json
careerreach-ai/examples/showcase/: careerreach_agent_output_public.xlsx  demo_input_prompt.md  demo_output_preview.md
careerreach-ai/scripts/: run-demo.sh
careerreach-ai/src/careerreach_ai/: __init__.py  __main__.py  boss_cli.py  cli.py  fixture_agent.py
careerreach-ai/tests/: test_demo_contract.py
docs/: architecture.md  product-notes.md  safety.md
examples/: codex_conversation_prompt.md  mock_agent_output.json  mock_opportunity.json  public_outreach_playbook.example.json  public_resume.example.json
scripts/: run-demo.ps1  setup.ps1  setup.sh
src/boss_agent_cli/: display.py  hooks.py  search_filters.py
src/careerreach_ai/: __init__.py  contracts.py  fixture_agent.py  redaction.py
tests/: test_demo_contract.py
