[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "careerreach-ai"
version = "0.1.0"
description = "A GitHub-ready CareerReach AI job-search communication agent demo."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Li Zhe" }
]
keywords = ["ai-agent", "codex", "rag", "chromadb", "job-search", "product-manager"]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
boss = [
  "boss-agent-cli[communication,rag]>=1.14.0",
]

[project.scripts]
careerreach-ai = "careerreach_ai.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/careerreach_ai"]
